--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,4 @@
-.body {
+body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 1.6rem;
@@ -17,7 +17,7 @@
   margin-bottom: 6rem;
 
   /* "O U T D O O R S" */
-  &-primary--main {
+  &--main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
@@ -30,7 +30,7 @@
     animation-delay: 0.1s;
   }
   /* "is where life happens" */
-  &-primary--sub {
+  &--sub {
     display: block;
     font-size: 2rem;
     font-weight: 400;
