--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -19,12 +19,38 @@
 
   &:hover {
     /* When hovering the button */
-    transform: translateY(-0.3ren);
+    transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
   }
 
   &:active {
     /* When clicking the button */
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary;
+
+    transition: all 0.2s;
+    animation: moveInUp 0.8s 0.1s;
+  }
+  &:hover {
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    padding: 0.3rem 1rem;
+    border-bottom: none;
+
+    background-color: $color-primary;
+    color: $color-white;
+  }
+  &:active {
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
