Added the features section with cards.

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -18,3 +18,12 @@
     }
   }
 }
+
+.container-feature {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  gap: $gutter-horizontal;
+}
