--- a/css/style.css
+++ b/css/style.css
@@ -160,10 +160,26 @@ body {
     .row .col-1-of-2:not(:last-child) {
       margin-right: 6rem; }
 
+.container-feature {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 6rem; }
+
 .section-about {
   background-color: #f7f7f7;
-  padding: 25rem 0;
+  padding: 25rem 0 30rem 0;
   margin-top: -20vh; }
+
+.section-features {
+  margin-top: -16rem;
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg); }
+  .section-features > * {
+    transform: skewY(7deg); }
 
 /* Primary Button */
 .btn--white {
@@ -200,8 +216,7 @@ body {
 .btn-text:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-  padding: 0.3rem 1rem;
-  border-bottom: none;
+  padding: 0 1.2rem;
   background-color: #55c57a;
   color: #fff; }
 
@@ -233,3 +248,22 @@ body {
       outline: 0.2rem solid #55c57a; }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
+
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  width: 30rem;
+  height: auto;
+  transition: transform 0.3s; }
+  .feature-box__icon {
+    font-size: 6rem;
+    margin-bottom: 0.5rem;
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: all 0.2s;
+    background-image: linear-gradient(to right, #7ed56f, #28b485); }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
