--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -44,8 +44,8 @@
   &:hover {
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-    padding: 0.3rem 1rem;
-    border-bottom: none;
+    padding: 0 1.2rem;
+    // border-bottom: none;
 
     background-color: $color-primary;
     color: $color-white;
