--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,8 +16,16 @@
   background-size: cover;
 
   transform: skewY(-7deg);
+  margin-top: -10rem;
 
   & > * {
     transform: skewY(7deg);
   }
+}
+
+.section-tours {
+  margin-top: 15rem;
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -16rem;
 }
