--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,4 +17,4 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
-//.....
+@import "components/card";
