Finalized all tour cards

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,9 @@
 /* Primary Button */
 
 .btn {
+  &--round {
+    border-radius: 100px;
+  }
   &--white {
     background-color: $color-white;
     color: $color-grey-dark;
