--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,9 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1rem; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
@@ -195,6 +198,10 @@ body {
 .btn--white {
   background-color: #fff;
   color: #777; }
+
+.btn--green {
+  background-color: #55c57a;
+  color: #fff; }
 
 .btn:link, .btn:visited {
   display: inline-block;
