--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,6 +8,10 @@
     background-color: $color-white;
     color: $color-grey-dark;
   }
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+  }
   &:link,
   &:visited {
     display: inline-block;
