--- a/css/style.css
+++ b/css/style.css
@@ -186,10 +186,10 @@ body {
     transform: skewY(7deg); }
 
 .section-tours {
-  margin-top: 15rem;
   background-color: #f7f7f7;
   padding: 25rem 0 50rem 0;
-  margin-top: -16rem; }
+  margin-top: -16rem;
+  margin-bottom: -10rem; }
 
 /* Primary Button */
 .btn--round {
