--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -24,8 +24,12 @@
 }
 
 .section-tours {
-  margin-top: 15rem;
+  // margin-top: 15rem;
   background-color: $color-grey-light-1;
   padding: 25rem 0 50rem 0;
   margin-top: -16rem;
+  margin-bottom: -10rem;
+}
+
+.section-stories {
 }
