--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,6 +1,10 @@
 .u-center-text {
   text-align: center;
 }
+.u-margin-bottom-huge {
+  margin-bottom: 12rem;
+}
+
 .u-margin-bottom-big {
   margin-bottom: 8rem;
 }
