--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,4 +18,4 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
-///
+@import "components/story";
