--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ html {
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
 
 /* Keyframes Animations */
 @keyframes moveInLeft {
@@ -114,6 +115,12 @@ body {
 .u-center-text {
   text-align: center; }
 
+.u-margin-top-huge {
+  margin-top: 12rem; }
+
+.u-margin-top-big {
+  margin-top: 8rem; }
+
 .u-margin-bottom-huge {
   margin-bottom: 12rem; }
 
@@ -125,9 +132,6 @@ body {
 
 .u-margin-bottom-small {
   margin-bottom: 1rem; }
-
-.u-margin-top-big {
-  margin-top: 8rem; }
 
 .header {
   height: 95vh;
@@ -190,13 +194,13 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 30rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -16rem;
   margin-bottom: -10rem; }
 
 .section-stories {
-  padding: 15rem 0;
-  background-color: #f7f7f7; }
+  padding: 25rem 0;
+  position: relative; }
 
 /* Primary Button */
 .btn--round {
@@ -441,3 +445,17 @@ body {
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
+
+.bg-video {
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.15; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
