--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,10 +1,19 @@
 .u-center-text {
   text-align: center;
 }
+
+//Top Margins
+.u-margin-top-huge {
+  margin-top: 12rem;
+}
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+
+// Bottom Margins
 .u-margin-bottom-huge {
   margin-bottom: 12rem;
 }
-
 .u-margin-bottom-big {
   margin-bottom: 8rem;
 }
@@ -13,8 +22,4 @@
 }
 .u-margin-bottom-small {
   margin-bottom: 1rem;
-}
-
-.u-margin-top-big {
-  margin-top: 8rem;
 }
