--- a/sass/components/_book.scss
+++ b/sass/components/_book.scss
@@ -1,9 +1,9 @@
 .book {
-  padding: 25rem 0;
-  position: relative;
-  &__picture {
-    background-size: 100%;
-    background-image: url(/img/nat-10.jpg);
-    padding: 23rem 50rem;
-  }
+  background-image: url(../img/nat-10.jpg);
+  background-size: 100%;
+  text-align: center;
+  border-radius: 6px;
+  box-shadow: 0 3rem 4rem rgba($color-black, 0.2);
+  width: 65%;
+  height: 100%;
 }
