--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -38,15 +38,10 @@
 }
 
 .section-book {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  padding: 25rem 0;
+  padding: 25rem 0 15rem 0;
   background-image: linear-gradient(
-    to bottom right,
+    to right bottom,
     $color-primary-light,
     $color-primary-dark
   );
-  z-index: -1;
 }
