Added a footer for Natours

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
 
 @import "pages/home";
 
@@ -20,4 +21,3 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
-@import "components/book"; //
