--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,46 @@ body {
   align-items: center;
   padding: 10rem 0;
   gap: 6rem; }
+  .container-book img {
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%); }
+
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  color: #f7f7f7; }
+  .footer__logo-box {
+    text-align: center;
+    margin-bottom: 8rem; }
+  .footer__logo {
+    width: 15rem;
+    height: auto; }
+  .footer__navigation {
+    border-top: 1px solid #777;
+    padding-top: 2rem;
+    display: inline-block; }
+  .footer__list {
+    list-style: none; }
+  .footer__item {
+    display: inline-block; }
+    .footer__item:not(:last-child) {
+      margin-right: 1.5rem; }
+  .footer__link:link, .footer__link:visited {
+    color: #f7f7f7;
+    background-color: #333;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all 0.2s; }
+  .footer__link:hover, .footer__link:active {
+    color: #55c57a;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: rotate(5deg) scale(1.3); }
+  .footer__copyright {
+    border-top: 1px solid #777;
+    padding-top: 2rem;
+    width: 80%;
+    float: right; }
 
 .section-about {
   background-color: #f7f7f7;
@@ -213,10 +253,6 @@ body {
 .section-stories {
   padding: 25rem 0 10rem 0;
   position: relative; }
-
-.section-book {
-  padding: 25rem 0 15rem 0;
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
 
 /* Primary Button */
 .btn--round {
@@ -475,12 +511,3 @@ body {
     height: 100%;
     width: 100%;
     object-fit: cover; }
-
-.book {
-  background-image: url(../img/nat-10.jpg);
-  background-size: 100%;
-  text-align: center;
-  border-radius: 6px;
-  box-shadow: 0 3rem 4rem rgba(0, 0, 0, 0.2);
-  width: 65%;
-  height: 100%; }
