--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -35,4 +35,13 @@
   padding: 10rem 0;
 
   gap: $gutter-horizontal;
+
+  img {
+    background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    );
+  }
 }
