--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,21 @@
 /* Imports of all .scss files */
+/*
+0-600px       Phone
+600-900px     Tablet portrait
+900-1200px    Tablet landscape
+1200-1800     is where our normal styles apply
+1800+         Big desktop
+*/
+/*
+$breakpoint:
+
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+1em = 16px
+*/
 *,
 *::after,
 *::before {
@@ -8,6 +25,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box;
