Fixed width of Cards and stories

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ html {
 body {
   box-sizing: border-box;
   padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 /* Keyframes Animations */
 @keyframes moveInLeft {
@@ -81,8 +84,7 @@ body {
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #777; }
 
 /* Primary Heading div box*/
 .heading-primary {
@@ -102,6 +104,9 @@ body {
     animation-name: moveInLeft;
     animation-duration: 2s;
     animation-delay: 0.1s; }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        letter-spacing: 0.5rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
@@ -112,6 +117,10 @@ body {
     /* animation-name: moveInRight;
       animation-duration: 2s;
       animation-delay: 0.1s; */ }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        letter-spacing: 1rem;
+        font-family: 5rem; } }
 
 .heading-secondary {
   display: inline-block;
@@ -124,6 +133,12 @@ body {
   color: transparent;
   transition: all 0.2s;
   background-image: linear-gradient(to right, #7ed56f, #28b485); }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem; } }
+  @media (max-width: 37.5em) {
+    .heading-secondary {
+      font-size: 2.5rem; } }
   .heading-secondary:hover {
     transform: skewY(1deg) skewX(15deg) scale(1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -506,7 +521,7 @@ body {
   -moz-perspective: 150rem;
   position: relative;
   height: 52rem;
-  width: 15%; }
+  width: 20%; }
   .card__side {
     color: #fff;
     font-size: 2rem;
@@ -603,7 +618,7 @@ body {
     font-weight: 100; }
 
 .story {
-  width: 35%;
+  width: 60%;
   padding: 6rem;
   padding-left: 8rem;
   margin: 0 auto;
@@ -677,6 +692,9 @@ body {
   width: 90%;
   display: block;
   transition: all 0.3s; }
+  @media (max-width: 56.25em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -702,6 +720,10 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block; }
+  @media (max-width: 56.25em) {
+    .form__radio-group {
+      width: 100%;
+      margin-bottom: 2rem; } }
 
 .form__radio-input {
   display: none; }
