--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -21,6 +21,7 @@ $color-black: #000;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+$gutter-vertical-small: 6rem;
 
 // Default font size
 $default-font-size: 1.6rem;
