--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,9 +9,11 @@ html {
   font-size: 62.5%;
 
   @include respond(tab-land) {
+    //width < 1200
     font-size: 56.25%;
   }
   @include respond(tab-port) {
+    // width < 900
     font-size: 50%;
   }
   @include respond(big-desktop) {
@@ -21,4 +23,10 @@ html {
 body {
   box-sizing: border-box;
   padding: 3rem;
+
+  // -------------Responsive------------------
+  @include respond(tab-port) {
+    // width < 900
+    padding: 0;
+  }
 }
