--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,46 +1,100 @@
+// .story {
+//   width: 60%;
+//   padding: 6rem;
+//   padding-left: 8rem;
+//   margin: 0 auto;
+//   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
+//   background-color: $color-white;
+//   border-radius: 3px;
+//   font-size: $default-font-size;
+
+//   transform: skewX(-12deg);
+
+//   //   Circle photo
+//   &__shape {
+//     width: 15rem;
+//     height: 15rem;
+//     float: left;
+//     background-color: blanchedalmond;
+//     shape-outside: circle(50% at 50% 50%);
+//     -webkit-shape-outside: circle(50% at 50% 50%);
+
+//     clip-path: circle(50% at 50% 50%);
+//     -webkit-clip-path: circle(50% at 50% 50%);
+
+//     transform: translateX(-2rem) skewX(12deg);
+
+//     position: relative;
+//   }
+
+//   &__image {
+//     height: 100%;
+//     transform: translateX(-3.5rem) scale(1.4);
+//     transition: all 0.5s;
+//   }
+//   &:hover &__image {
+//     transform: translateX(-3.5rem) scale(1);
+//     filter: blur(3px) brightness(80%);
+//   }
+//   &__text {
+//     transform: skewX(12deg);
+//   }
+
+//   //   Caption pulls up when hovers
+//   &__caption {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate(-50%, 20%);
+//     color: $color-white;
+//     text-transform: uppercase;
+//     text-align: center;
+//     font-size: 1.7rem;
+//     transition: all 0.5s;
+//     backface-visibility: hidden;
+
+//     opacity: 0;
+//   }
+//   &:hover &__caption {
+//     opacity: 1;
+//     transform: translate(-50%, -50%);
+//   }
+// }
+
 .story {
-  width: 60%;
-  padding: 6rem;
-  padding-left: 8rem;
+  width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
-  background-color: $color-white;
+  background-color: rgba($color-white, 0.6);
   border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
   font-size: $default-font-size;
-
   transform: skewX(-12deg);
 
-  //   Circle photo
   &__shape {
     width: 15rem;
     height: 15rem;
     float: left;
-    background-color: blanchedalmond;
-    shape-outside: circle(50% at 50% 50%);
     -webkit-shape-outside: circle(50% at 50% 50%);
-
-    clip-path: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
-
-    transform: translateX(-2rem) skewX(12deg);
-
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg);
     position: relative;
   }
 
-  &__image {
+  &__img {
     height: 100%;
-    transform: translateX(-3.5rem) scale(1.4);
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
     transition: all 0.5s;
   }
-  &:hover &__image {
-    transform: translateX(-3.5rem) scale(1);
-    filter: blur(3px) brightness(80%);
-  }
+
   &__text {
     transform: skewX(12deg);
   }
 
-  //   Caption pulls up when hovers
   &__caption {
     position: absolute;
     top: 50%;
@@ -48,15 +102,20 @@
     transform: translate(-50%, 20%);
     color: $color-white;
     text-transform: uppercase;
-    text-align: center;
     font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
     transition: all 0.5s;
     backface-visibility: hidden;
-
-    opacity: 0;
   }
+
   &:hover &__caption {
     opacity: 1;
     transform: translate(-50%, -50%);
+  }
+
+  &:hover &__img {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%);
   }
 }
