--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -9,6 +9,10 @@
     @include respond(tab-port) {
       margin-bottom: $gutter-vertical-small;
     }
+    @include respond(tab-port) {
+      max-width: 50rem;
+      padding: 0 3rem;
+    }
   }
 
   @include clearfix;
@@ -60,29 +64,28 @@
   }
 }
 
-.container-feature {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+// .container-feature {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+//   align-items: center;
 
-  gap: $gutter-horizontal;
-}
-.container-book {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 10rem 0;
+//   gap: $gutter-horizontal;
+// }
+// .container-book {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+//   align-items: center;
+//   padding: 10rem 0;
 
-  gap: $gutter-horizontal;
-
-  img {
-    background-image: linear-gradient(
-      105deg,
-      rgba($color-white, 0.9) 0%,
-      rgba($color-white, 0.9) 50%,
-      transparent 50%
-    );
-  }
-}
+//   gap: $gutter-horizontal;
+// }
+// img {
+//   background-image: linear-gradient(
+//     105deg,
+//     rgba($color-white, 0.9) 0%,
+//     rgba($color-white, 0.9) 50%,
+//     transparent 50%
+//   );
+// }
